경세 fix : 앨범 가이드 모달 텍스트 변경, 앨범 디테일 AI 버전 나타내는 요소 nowrap 처리

--- a/src/components/mypage/albumsAndCollectionsComponents/AlbumCollectionItems.scss
+++ b/src/components/mypage/albumsAndCollectionsComponents/AlbumCollectionItems.scss
@@ -85,14 +85,29 @@
   &__cover {
     position: relative;
     width: 100%;
+
+    height: 190px;
+
     max-height: 190px;
+
+    border-radius: 4px;
+    overflow: hidden;
+    background-color: #000;
 
     img {
       width: 100%;
       height: 100%;
       object-fit: cover;
-      border-radius: 4px;
     }
+  }
+}
+
+@keyframes shimmer {
+  0% {
+    background-position: -100% 0;
+  }
+  100% {
+    background-position: 100% 0;
   }
 }
 
