--- a/src/styles/AlbumDetail.scss
+++ b/src/styles/AlbumDetail.scss
@@ -256,6 +256,7 @@
             border: 1px solid #00ffb3;
             border-radius: 12px;
             padding: 8px 12px;
+            white-space: nowrap;
           } //album-detail__song-detail__right__version--END--
         }
         .album-detail__song-detail__right__type {
